# CA-FinalProject

./: .ghc.environment.x86_64-linux-8.6.5  CHANGELOG.md  README.md  account.txt  crud.cabal  log.txt  username.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
