cabal-version:      2.4
name:               crud
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arif Maulana Rahman
maintainer:         arif.rahman@codify.id

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable crud
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0, List, split, text, directory, transformers, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
